# ONE

./: Makefile.template  build_luci_run_android.sh  push_runner.sh
codegen/luci-codegen/src/: Codegen.cpp  KernelBuilder.cpp
compiler/caffegen/: CMakeLists.txt
compiler/circle-tensordump/: CMakeLists.txt
compiler/circle2circle-dredd-recipe-test/: CMakeLists.txt
compiler/common-artifacts/: CMakeLists.txt
compiler/i5diff/: CMakeLists.txt
compiler/luci-interpreter/hal/linux/: HALConv2d.h  hal.cmake
compiler/luci-interpreter/src/core/: KernelParams.h
compiler/luci-interpreter/src/kernels/: Add.cpp  Add.h  CMakeLists.txt  Conv2D.cpp  ExpandDims.cpp  ExpandDims.h  Fill.cpp  Fill.h  Gather.cpp  Gather.h  Less.cpp  Less.h  Range.cpp  Range.h  Rank.cpp  Rank.h  Shape.cpp  Shape.h  Sub.cpp  Sub.h  Utils.cpp  Utils.h  While.cpp  While.h
compiler/luci-run/: CMakeLists.txt  requires.cmake
compiler/luci-run/src/: Run.cpp
compiler/luci-value-test/: CMakeLists.txt
compiler/mir/: CMakeLists.txt
compiler/nnc/: CMakeLists.txt
compiler/nnkit/: CMakeLists.txt
compiler/nnkit-caffe/: CMakeLists.txt
compiler/pota-quantization-value-test/: CMakeLists.txt
compiler/record-minmax/: CMakeLists.txt
compiler/record-minmax-conversion-test/: CMakeLists.txt
compiler/tf2tfliteV2-conversion-test/: CMakeLists.txt
compiler/tflite2circle-conversion-test/: CMakeLists.txt
infra/nncc/command/: configure
infra/nnfw/command/: configure
tests/tools/nnpackage_run/: CMakeLists.txt
tests/tools/nnpackage_run/src/: args.cc  args.h  (+1 more)
tests/tools/tflite_run/: CMakeLists.txt
(+12 files in other folders)
